--- a/SimpleChatC#/Server/MainWindow.xaml
+++ b/SimpleChatC#/Server/MainWindow.xaml
@@ -13,14 +13,17 @@
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
             <RowDefinition Height="Auto"/>
-            <RowDefinition/>
+            <RowDefinition Height="*"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
 
-        <ScrollViewer Width="150" VerticalScrollBarVisibility="Auto" Grid.Row="2" Height="300">
-            <ListBox x:Name="Users" ItemsSource="{Binding Users}"/>
-        </ScrollViewer>
-        <Button Content="{Binding ToggleServerButtonTitle}" x:Name="ServerToggle" Grid.Row="1" Height="50" Margin="0,0,0,10" Command="{Binding ToggleServer}"></Button>
         <TextBox x:Name="ServerPort" Grid.Row="0" Margin="0,0,0,10" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"
                  Text="{Binding ServerPort}"></TextBox>
+        <Button Content="{Binding ToggleServerButtonTitle}" x:Name="ServerToggle" Grid.Row="1" Height="50" Margin="0,0,0,10" Command="{Binding ToggleServer}"/>
+        <ScrollViewer Width="150" VerticalScrollBarVisibility="Auto" Grid.Row="2" Height="300">
+            <ListBox x:Name="Users" ItemsSource="{Binding Users}" SelectedIndex="{Binding SelectedUserIndex}"/>
+        </ScrollViewer>
+        <Button Content="Kick User" Grid.Row="3" Height="50" Margin="0,5,0,0" Command="{Binding KickUser}"
+                IsEnabled="{Binding IsUserSelected}"/>
     </Grid>
 </Window>
