--- a/SimpleChatC#/Client/MainWindow.xaml
+++ b/SimpleChatC#/Client/MainWindow.xaml
@@ -52,23 +52,23 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="*"/>
             </Grid.RowDefinitions>
-            <TextBox x:Name="ServerIP" 
+            <TextBox x:Name="ServerIP" Width="150"
                      IsEnabled="{Binding CanChangeServerIP}"
                      Text="{Binding ServerIP, UpdateSourceTrigger=PropertyChanged}"
                      ToolTip="Ip" Grid.Row="0" Margin="0,0,0,10" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></TextBox>
-            <TextBox IsEnabled="{Binding CanChangeServerPort}" Text="{Binding ServerPort, UpdateSourceTrigger=PropertyChanged}"
+            <TextBox Width="150" IsEnabled="{Binding CanChangeServerPort}" Text="{Binding ServerPort, UpdateSourceTrigger=PropertyChanged}"
                      x:Name="ServerPort" 
                      ToolTip="Port" Grid.Row="1" Margin="0,0,0,10" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></TextBox>
             <Button Content="{Binding ToggleConnectionButtonText}" 
                     x:Name="ToggleConnection" Grid.Row="2" Height="50" Margin="0,0,0,10"
                     Command="{Binding ToggleConnection}"></Button>
-            <TextBox Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" ToolTip="Username"
+            <TextBox Width="150" Text="{Binding Username, UpdateSourceTrigger=PropertyChanged}" ToolTip="Username"
                      Grid.Row="3" Margin="0,0,0,10" Height="25" VerticalContentAlignment="Center" HorizontalContentAlignment="Center"></TextBox>
             <Button Content="Set Username" 
                     Grid.Row="4" Height="50" Margin="0,0,0,10"
                     Command="{Binding SetUsername}"></Button>
             <ScrollViewer Width="150" VerticalScrollBarVisibility="Auto" Grid.Row="5">
-                <ListBox x:Name="Users" ItemsSource="{Binding Users}"/>
+                <ListBox Width="150" x:Name="Users" ItemsSource="{Binding Users}"/>
             </ScrollViewer>
         </Grid>
     </Grid>
