--- a/SimpleChatC#/Client/Gui/MainWindow.xaml
+++ b/SimpleChatC#/Client/Gui/MainWindow.xaml
@@ -1,9 +1,9 @@
-﻿<Window x:Class="SimpleChat.MainWindow"
+﻿<Window x:Class="SimpleChat.Gui.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SimpleChat"
+        xmlns:local="clr-namespace:SimpleChat.Gui"
         mc:Ignorable="d"
         Title="SimpleChat Client" SizeToContent="WidthAndHeight" Closing="Window_Closing" ResizeMode="NoResize">
     <Window.DataContext>
