--- a/SimpleChatC#/Client/App.xaml
+++ b/SimpleChatC#/Client/App.xaml
@@ -1,8 +1,8 @@
 ﻿<Application x:Class="SimpleChat.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:SimpleChat"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:SimpleChat.Gui"
+             StartupUri="Gui/MainWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
