--- a/SimpleChatC#/Client/Gui/MainWindow.xaml
+++ b/SimpleChatC#/Client/Gui/MainWindow.xaml
@@ -23,8 +23,8 @@
                 <RowDefinition Height="Auto"/>
                 <RowDefinition Height="Auto"/>
             </Grid.RowDefinitions>
-            <ScrollViewer VerticalScrollBarVisibility="Auto" Width="375" Height="300" Margin="0,0,0,10">
-                <TextBox x:Name="MessagesArea" TextWrapping="Wrap" AcceptsReturn="true"  Text="{Binding ChatText}"></TextBox>
+            <ScrollViewer x:Name="MessagesAreaScroller" VerticalScrollBarVisibility="Auto" Width="375" Height="300" Margin="0,0,0,10">
+                <TextBox x:Name="MessagesArea" TextWrapping="Wrap" AcceptsReturn="true"  Text="{Binding ChatText}" TextChanged="MessagesArea_TextChanged"></TextBox>
             </ScrollViewer>
             <Grid Grid.Row="1">
                 <Grid.ColumnDefinitions>
