--- a/SimpleChatC#/Client/Gui/LoginWindow.xaml
+++ b/SimpleChatC#/Client/Gui/LoginWindow.xaml
@@ -16,9 +16,9 @@
         </Grid.RowDefinitions>
         
         <Label Grid.Row="0" Content="Username" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Grid.Row="1" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="200"/>
+        <TextBox Grid.Row="1" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
         <Label Grid.Row="2" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-        <TextBox Grid.Row="3" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="200"/>
+        <PasswordBox Grid.Row="3" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="200"/>
         <Button Grid.Row="4" Content="Login" Width="80" Height="40" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="10,10,0,0"/>
     </Grid>
 </Window>
