--- a/SimpleChatC#/Client/Gui/Chat/ChatWindow.xaml
+++ b/SimpleChatC#/Client/Gui/Chat/ChatWindow.xaml
@@ -1,13 +1,13 @@
-﻿<Window x:Class="SimpleChat.Gui.MainWindow"
+﻿<Window x:Class="SimpleChat.Gui.Chat.ChatWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:SimpleChat.Gui"
+        xmlns:chat="clr-namespace:SimpleChat.Gui.Chat"
         mc:Ignorable="d"
         Title="SimpleChat Client" SizeToContent="WidthAndHeight" Closing="Window_Closing" ResizeMode="NoResize">
     <Window.DataContext>
-        <local:MainWindowViewModel/>
+        <chat:ChatWindowViewModel/>
     </Window.DataContext>
     <Grid Width="Auto">
         <Grid.ColumnDefinitions>
