--- a/SimpleChatC#/Client/Gui/Login/LoginWindow.xaml
+++ b/SimpleChatC#/Client/Gui/Login/LoginWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SimpleChat.Gui.LoginWindow"
+﻿<Window x:Class="SimpleChat.Gui.Login.LoginWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
