--- a/SimpleChatC#/Client/Gui/Register/RegisterWindow.xaml
+++ b/SimpleChatC#/Client/Gui/Register/RegisterWindow.xaml
@@ -1,4 +1,4 @@
-﻿<Window x:Class="SimpleChat.Gui.RegisterWindow"
+﻿<Window x:Class="SimpleChat.Gui.Register.RegisterWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
