--- a/SimpleChatC#/Client/App.xaml
+++ b/SimpleChatC#/Client/App.xaml
@@ -2,7 +2,7 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SimpleChat.Gui"
-             StartupUri="Gui/Views/MainWindow.xaml">
+             StartupUri="Gui/Chat/ChatWindow.xaml">
     <Application.Resources>
          
     </Application.Resources>
