--- a/SimpleChatC#/Client/Gui/Connect/ConnectControl.xaml
+++ b/SimpleChatC#/Client/Gui/Connect/ConnectControl.xaml
@@ -21,6 +21,6 @@
         <Label Grid.Row="0" Grid.Column="1" Content="Port"/>
         <TextBox Grid.Row="1" Width="160" Height="23" Margin="0,5,5,5" ></TextBox>
         <TextBox Grid.Row="1" Grid.Column="1" Width="80" Height="23" Margin="0,5,5,5"></TextBox>
-        <Button Grid.Row="1" Grid.Column="2" Content="Connect" Grid.RowSpan="2" Height="23" Width="100" Margin="0,5,0,5" Click="Button_Click"></Button>
+        <Button Grid.Row="1" Grid.Column="2" Content="Connect" Grid.RowSpan="2" Height="23" Width="100" Margin="0,5,0,5" Click="ConnectToServer"></Button>
     </Grid>
 </UserControl>
