--- a/SimpleChatC#/Client/Gui/Login/LoginControl.xaml
+++ b/SimpleChatC#/Client/Gui/Login/LoginControl.xaml
@@ -16,12 +16,12 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <Button Content="Cancel" Margin="0,0,0,20" Click="Button_Click"></Button>
+            <Button Content="Cancel" Margin="0,0,0,20" Click="Cancel"></Button>
             <Label Grid.Row="1" Content="Username" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <TextBox x:Name="username" Grid.Row="2" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
             <Label Grid.Row="3" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top"/>
             <PasswordBox x:Name="password" Grid.Row="4" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="200"/>
-            <Button Grid.Row="5" Content="Login" Width="80" Height="40" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,10,0,10"/>
+            <Button Grid.Row="5" Content="Login" Width="80" Height="40" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,10,0,10" Click="Login"/>
         </Grid>
         <Grid>
             <Grid.ColumnDefinitions>
