--- a/SimpleChatC#/Client/Gui/Register/RegisterControl.xaml
+++ b/SimpleChatC#/Client/Gui/Register/RegisterControl.xaml
@@ -16,13 +16,13 @@
                 <RowDefinition Height="auto"/>
                 <RowDefinition Height="auto"/>
             </Grid.RowDefinitions>
-            <Button Content="Cancel" Margin="0,0,0,20" Click="Button_Click"></Button>
+            <Button Content="Cancel" Margin="0,0,0,20" Click="Cancel"></Button>
 
             <Label Grid.Row="1" Content="Username" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <TextBox Grid.Row="2" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
+            <TextBox Grid.Row="2" x:Name="username" HorizontalAlignment="Left" Height="23" TextWrapping="Wrap" VerticalAlignment="Top" Width="200"/>
             <Label Grid.Row="3" Content="Password" HorizontalAlignment="Left" VerticalAlignment="Top"/>
-            <PasswordBox Grid.Row="4" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="200"/>
-            <Button Grid.Row="5" Content="Register" Width="80" Height="40" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,10,0,10"/>
+            <PasswordBox Grid.Row="4" x:Name="password" HorizontalAlignment="Left" Height="23" VerticalAlignment="Top" Width="200"/>
+            <Button Grid.Row="5" Content="Register" Width="80" Height="40" HorizontalAlignment="Right" VerticalAlignment="Center" Margin="0,10,0,10" Click="Register"/>
         </Grid>
         <Grid>
             <Grid.ColumnDefinitions>
